feat: allow users to choose their color
A user can now choose a color via a color picker in the home page before joining a game. He/she can
also change his/her color inside a room by clicking on his/her name. This color will be used for the
`Bars` as a distinctive, and also in the list of users in the top right corner

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -30,3 +30,20 @@ input[type='number'] {
 input:focus::placeholder {
   color: transparent;
 }
+
+.react-colorful:hover {
+  cursor: pointer;
+}
+
+.only-hue .react-colorful {
+  height: min-content;
+}
+
+.only-hue .react-colorful__saturation {
+  display: none;
+}
+
+.picker-pill .react-colorful__hue {
+  border-radius: 2em;
+  width: 9rem;
+}
